# animal-chess

./: .gitignore  README.md  develop.txt
core/: Cargo.toml
core/src/: board.rs  chess.rs  lib.rs  tests.rs
core/src/player/: alpha_beta.rs  mcts.rs
pymodule/: Cargo.toml
pymodule/src/: lib.rs
