[package]
name = "animal_chess_core"
version = "0.1.0"
authors = ["toney <8242117@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "core_benmark"
harness = false

[lib]
bench = false
crate-type=["rlib"]
